--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+body{
+    
+    background: darkturquoise;
+    margin: 0px;
+}
+
 #images-block {
+    top: 100px;
+    background: white;
     display: flex;
     flex-wrap: wrap;
-    max-width: 900px;
+    max-width: 90%;
     margin: auto;
     justify-content: center;
     box-shadow: 0 0 3px 2px black;
@@ -11,36 +19,57 @@
     position: relative;
 }
 .loading::before {
-    content: "Loading...";
+    content: "Please waiting...";
     position: absolute;
     background: #dddddded;
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
-    z-index: 5;
+    z-index: 1;
     text-align: center;
-    padding-top: 30px;
-    font-size: 50px;
+    padding-top: 80px;
+    font-size: 80px;
 }
 
 #images-block img {
     margin: 15px;
     border: 2px solid #000;
+    width: 500px;
+    height: 500px;
 }
 
 #nav {
-    max-width: 340px;
+    
+    max-width:  40%;
     margin: auto;
     display: flex;
     justify-content: space-between;
+    padding-top: 30px;
+
+
 }
 #nav button, select, input {
     font-size: 18px;
     cursor: pointer;
+   
 }
 
 #nav input {
     max-width: 50px;
     text-align: center;
+}
+#btn-prev, #btn-next {
+    width: 250px;
+    height: 30px;
+    
+}
+.wrapper{
+    background-color: black;
+    height: 100px;
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+    width: 100%;
+    
 }
